2009-09-21  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/gen_log_analyzer.erl, src/logtilla_test.erl: Add -author and
	-copyright module attributes.

	* src/Makefile.am (index.html): Fix invocation of EDoc.

	* src/gen_log_analyzer.erl (terminate): Terminate all pending
	gen_server calls on process termination.

	* c_src/logtilla_parser.c (handle_requests): Fix typo leftover
	from debugging code.

2009-09-14  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/gen_log_analyzer.erl: Fix function specs typos in edoc
	comments.

	* c_src/logtilla_parser.c: Remove leftover debugging code.

2009-09-13  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/gen_log_analyzer.erl, src/logtilla_test.erl: Add type
	specifications and EDoc comments. Added the stop/1 function.
	* src/Makefile.am: Generate doc files.

2009-09-12  Romain Lenglet  <romain.lenglet@berabera.info>

	* c_src/Makefile.am, c_src/logtilla_parser.c: Reimplement the
	interactions with the parser to use ParseLogFile operations,
	i.e. to receive ParseLogFile PDUs, send the log entries into
	ReturnLogEntry PDUs, and return CannotOpenFile and EndOfFile PDUs.
	* src/Makefile.am, src/gen_log_analyzer.erl,
	src/logtilla_test.erl: Reimplement the interactions with the C
	port program to perform ParseLogFile operations. Implement a
	gen_server call to perform ParseLogFile operations. Add behaviour
	callbacks for "pass-through" call/3 and cast/2 to modules.

2009-09-08  Romain Lenglet  <romain.lenglet@berabera.info>

	* asn1/WebAccessLogParserOperations.asn1, asn1/Makefile.am: Define
	PDUs for the ParseLogFile operations: ParseLogFile,
	CannotOpenFile, ReturnLogEntry, and EndOfFile.

2009-08-31  Romain Lenglet  <romain.lenglet@berabera.info>

	* src/Makefile.am, src/gen_log_analyzer.erl,
	src/logtilla_test.erl: Define the gen_log_analyzer behaviour, and
	refactor logtilla_test to use it.

2009-08-30  Romain Lenglet  <romain.lenglet@berabera.info>
